k8s/app/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: hotel
  namespace: otmm
  labels:
    app: hotel
    service: hotel
spec:
  ports:
    - port: 8080
      name: http
      targetPort: 8082
  selector:
    app: hotel

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotel
  namespace: otmm
  labels:
    app: hotel
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotel
      version: v1
  template:
    metadata:
      labels:
        app: hotel
        version: v1
    spec:
      containers:
        - name: hotel
          image: icn.ocir.io/orasejapan/hotel
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
          resources:
            limits:
              memory: "500Mi"
              cpu: "250m"
          volumeMounts:
          - name: handson
            mountPath: /db-demo/creds
      volumes:
      - name: handson
        secret:
          secretName: okeatp1
      imagePullSecrets:
        - name: regcred
---
##################################################################################################
# Flight
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: flight
  namespace: otmm
  labels:
    app: flight
    service: flight
spec:
  ports:
    - port: 8080
      name: http
      targetPort: 8083
  selector:
    app: flight

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight
  namespace: otmm
  labels:
    app: flight
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flight
      version: v1
  template:
    metadata:
      labels:
        app: flight
        version: v1
    spec:
      containers:
        - name: flight
          image: icn.ocir.io/orasejapan/flight
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
          resources:
            limits:
              memory: "500Mi"
              cpu: "250m"
          volumeMounts:
          - name: handson
            mountPath: /db-demo/creds
      volumes:
      - name: handson
        secret:
          secretName: okeatp2              
      imagePullSecrets:
        - name: regcred
---
##################################################################################################
# Trip Manager
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: trip-manager
  namespace: otmm
  labels:
    app: trip-manager
    service: trip-manager
spec:
  ports:
    - port: 8080
      name: http
      targetPort: 8081
  selector:
    app: trip-manager

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trip-manager
  namespace: otmm
  labels:
    app: trip-manager
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trip-manager
      version: v1
  template:
    metadata:
      labels:
        app: trip-manager
        version: v1
    spec:
      containers:
        - name: trip-manager
          image: icn.ocir.io/orasejapan/trip-manager
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          resources:
            limits:
              memory: "500Mi"
              cpu: "250m"
      imagePullSecrets:
        - name: regcred
---
##################################################################################################
# Console
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: console
  namespace: otmm
  labels:
    app: console
    service: console
spec:
  ports:
    - port: 8080
      name: http
      targetPort: 8084
  selector:
    app: console

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: console
  namespace: otmm
  labels:
    app: console
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: console
      version: v1
  template:
    metadata:
      labels:
        app: console
        version: v1
    spec:
      containers:
        - name: console
          image: icn.ocir.io/orasejapan/console
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8084
          resources:
            limits:
              memory: "500Mi"
              cpu: "250m"
      imagePullSecrets:
        - name: regcred
---
