k8s/app/network.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: otmm-sampleappslra
  namespace: otmm
spec:
  gateways:
  - otmm-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /flightService
    rewrite:
      uri: /flightService
    route:
    - destination:
        host: flight
        subset: v1
  - match:
    - uri:
        prefix: /hotelService
    rewrite:
      uri: /hotelService
    route:
    - destination:
        host: hotel
        subset: v1
  - match:
    - uri:
        prefix: /trip-service
    rewrite:
      uri: /trip-service
    route:
    - destination:
        host: trip-manager
        subset: v1
  - match:
    - uri:
        prefix: /demo-console
    rewrite:
      uri: /demo-console
    route:
    - destination:
        host: console
        subset: v1
  - match:
    - uri:
        exact: /
    - uri:
        regex: '^.*\.(ico|png|jpg|js|woff|svg|woff2|eot|ttf|css)$'
    route:
    - destination:
        host: console
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: trip-manager
  namespace: otmm
spec:
  host: trip-manager
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: flight
  namespace: otmm
spec:
  host: flight
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hotel
  namespace: otmm
spec:
  host: hotel
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: console
  namespace: otmm
spec:
  host: console
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: v1
      labels:
        version: v1
